fixed alignment

--- a/src/app/layouts/post-card/post-card.component.scss
+++ b/src/app/layouts/post-card/post-card.component.scss
@@ -1,8 +1,10 @@
 @import "../../../colors";
 
 .card{
-  max-width: 25vw;
-  height: 75vh;
+  height: 98%;
+  width: 100%;
+  margin-top: 1vh;
+  margin-bottom: 10vh;
   border: none;
   box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
 }
