--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,5 +7,5 @@
   padding-top: 1vh;
 
   background-color: $primary;
-  height: 100vh;
+  //height: 100vh;
 }
